feat: added room api
